fix: contrast ratio for $blue and add colors to todo shortcode

--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -12,10 +12,13 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black:    #000;
 
-$yellow:   #ffc331;  // python yellow
+$blue-py:  #387eb8;   // python logo blue 
+$yellow-py:   #ffc331;  // python logo yellow
+
+$yellow:   $yellow-py;
 $black:    #1d2d35;
 $beige:    #fbf7f0;
-$blue:     #387eb8;   // python blue (currently only used in header bar)
+$blue:     darken($blue-py, 5%); // a little bit darker for better contrast ratio
 
 // $red:      #e55235;
 $purple:   #5d2f86;
