--- a/assets/scss/components/_alerts2.scss
+++ b/assets/scss/components/_alerts2.scss
@@ -1,7 +1,7 @@
 $primary: $blue !default;
 $secondary: $gray-600 !default;
 $success: $green !default;
-$bd-info: $blue !default;
+$bd-info: $blue-py !default;
 $bd-warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-100 !default;
