--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -132,7 +132,7 @@ button#doks-versions {
 
 .header-bar {
   border-top: 4px solid;
-  border-image-source: linear-gradient(90deg, $blue, $yellow);
+  border-image-source: linear-gradient(90deg, $blue-py, $yellow);
   border-image-slice: 1;
 }
 
